src/test/test_cases/invalid/syntaxErr/forLoop/forNoDone.wacc
# No concluding 'done' at the end of the for loop

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  for (int i = 0, i < 5, i = i + 2) do
    println "There is no 'done' at the end of this for loop"
end